--- a/module3-solution/style.css
+++ b/module3-solution/style.css
@@ -10,7 +10,7 @@ background-color: black;
 color: #61122F;
 }
 body{
-	background-color: #112233;
+	background-color: #61122F;
 	color: white;
 }
 .glyphicon{
